...
    <string name="steps_taken"> Steps taken</string>
    <string name="miles_taken">Miles walked</string>
    <string name="planned_steps"> Planned steps taken</string>
    <string name="planned_distance"> Planned miles travelled</string>
    <string name="select_new_goal">Select New Goal</string>
    <string name="num_steps">Number of steps</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="manage_friends">Manage Friends</string>
    <string name="add_500_steps">Add 500 Steps</string>
</resources>

